--- a/src/styles/terminal.css
+++ b/src/styles/terminal.css
@@ -37,3 +37,10 @@
     animation-iteration-count: infinite;
     animation-direction: alternate;
 }
+
+.text-glitch {
+    animation-duration: 0.022s;
+    animation-name: text-flicker;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+}
