--- a/src/styles/terminal.css
+++ b/src/styles/terminal.css
@@ -19,15 +19,12 @@
     content: " ";
     display: block;
     position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     z-index: 2;
     background:
         linear-gradient(rgba(18, 16, 16, 0) 50%, rgba(255, 255, 255, 0.08) 50%),
         linear-gradient(90deg, rgba(255, 0, 0, 0.12), rgba(0, 255, 0, 0.12), rgba(0, 0, 255, 0.12));
     background-size: 100% 4px, 4px 100%;
+    inset: 0;
     pointer-events: none;
 }
 
