--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,35 +2,32 @@
 @tailwind components;
 @tailwind utilities;
 
+*,
+::before,
+::after {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: "VT323", monospace;
+    font-weight: 400;
+    letter-spacing: 0.06em;
+    user-select: none;
+}
 
-@layer utilities {
-    @variants responsive {
-
-        /* Hide scrollbar for Chrome, Safari and Opera */
-        .no-scrollbar::-webkit-scrollbar {
-            display: none;
-        }
-
-        /* Hide scrollbar for IE, Edge and Firefox */
-        .no-scrollbar {
-            -ms-overflow-style: none;
-            /* IE and Edge */
-            scrollbar-width: none;
-            /* Firefox */
-        }
-    }
+html,
+body {
+    color-scheme: dark;
+    width: 100%;
+    min-width: 380px;
+    height: 100%;
+    min-height: -webkit-fill-available;
+    margin: 0;
 }
 
 body {
     @apply scrollbar-none;
     font-family: 'VT323', monospace;
     user-select: none;
-}
-
-h1 {
-    @apply tracking-wide text-8xl text-primary-default;
-}
-
-p {
-    @apply text-2xl font-normal text-primary-default;
+    overscroll-behavior-y: contain;
+    -webkit-tap-highlight-color: transparent;
 }
